Fix dark mode

--- a/petlistpro/src/App.css
+++ b/petlistpro/src/App.css
@@ -12,13 +12,18 @@
   :root {
     --box_bg: 
     --invert: invert(0);
+    --bg_color: linear-gradient(145deg, #161616, #212121);
+    --border_color: rgb(26, 158, 125);
+    
   }
 
 
 [data-theme='dark'] {
+  --bg_color: linear-gradient(145deg, #ffffff, #c1c3c6);
   --invert: invert(1);
   --iv: invert(1);
   --text_fill: rgb(255, 255, 255);
+  --border_color: rgb(229, 97, 130);
 }
 
 .background {
@@ -40,6 +45,9 @@
 }
 
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
 	overflow: hidden;
 	animation: background-scroll 750s linear infinite;
@@ -54,6 +62,7 @@ body {
 }
 
 .petlistPro {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: start;
@@ -69,7 +78,6 @@ body {
 }
 
 h1 {
-  
   font-family: Helvetica;
   margin: 15px;
   background: linear-gradient(
@@ -114,12 +122,6 @@ li a:hover {
   background-color: var(--text_fill);
 }
 
-#Footer { 
-  
- text-align: center;
- font-family: SF Pro Text;
-}
-
 .selected {
   text-decoration: line-through;
   opacity: 0.4;
@@ -130,36 +132,37 @@ li a:hover {
 }
 
 .petName {
-  padding: 14px 32px 14px 16px;
+  padding: 14px 32px 13.5px 16px;
   border-radius: 20px 0 0 20px;
   border-width: 2px;
   border-color: rgb(26, 158, 125);
   outline: none;
   width: 320px;
   background: transparent;
-  color: var(--text_fill);
-  
+  color: black;
+  cursor: text;
 }
 
 .petAge {
-  padding: 14px;
+  padding: 14px 14px 13.5px 14px;
   border-width: 2px;
   border-color: rgb(26, 158, 125);
-  width: 50px; 
-  cursor: pointer;
+  width: 60px; 
+  cursor: text;
   outline: none;
   background: transparent;
-  color: var(--text_fill);
+  color: black;
   text-transform: capitalize;
 }
 
 .petSpecies {
+  cursor: pointer;
+  filter: var(--invert) !important;
+  color: var(--text_fill);
   font-size: 24px;
-  padding: 4px 32px 10px 16px;
-  border-radius: 20px 0 0 20px;
+  padding: 3px 32px 11px 16px;
   border-width: 2px;
-  border-color: rgb(26, 158, 125);
-  border-radius: 4px 0 0 4px;
+  border-color: var(--border_color);
   outline: none;
   height: inherit;
   background: transparent;
@@ -175,7 +178,7 @@ li a:hover {
 }
 
 .pet-button {
-  padding: 16px;
+  padding: 15px;
   border: none;
   border-radius: 0 20px 20px 0;
   cursor: pointer;
@@ -261,4 +264,72 @@ li a:hover {
 
 .edit-icon:hover {
   color: rgb(144, 255, 108);
+}
+
+.footer {
+    font-family: SF Pro Text;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    width: 220px;
+    min-height: 100px;
+    text-align: center;
+    margin: 48px auto;
+    padding-bottom: 50px;
+    font-size: large;
+}
+
+.header {
+  font-family: SF Pro Text;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 15px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  font-size: large;
+  height: 50px;
+}
+.messageBox {
+  margin: 0px;
+  padding: 0px;
+}
+
+.modeSwitch {
+  filter: var(--invert) !important;
+  font-size: 30px !important;
+  position: relative;
+  align-items: center;
+  padding: 0.5em 1.5em;
+  background: var(--bg_color);
+  border: none;
+  border-radius: .5rem;
+  color: #444;
+  font-size: 1rem;
+  font-weight: 700;
+  letter-spacing: .2rem;
+  text-align: center;
+  outline: none;
+  cursor: pointer;
+  transition: .2s ease-in-out;
+  box-shadow: -6px -6px 14px rgba(255, 255, 255, .7),
+              -6px -6px 10px rgba(255, 255, 255, .5),
+              6px 6px 8px rgba(255, 255, 255, .075),
+              6px 6px 10px rgba(0, 0, 0, .15);
+}
+.modeSwitch:hover {
+  box-shadow: -2px -2px 6px rgba(255, 255, 255, .6),
+              -2px -2px 4px rgba(255, 255, 255, .4),
+              2px 2px 2px rgba(255, 255, 255, .05),
+              2px 2px 4px rgba(0, 0, 0, .1);
+}
+.modeSwitch:active {
+  box-shadow: inset -2px -2px 6px rgba(255, 255, 255, .7),
+              inset -2px -2px 4px rgba(255, 255, 255, .5),
+              inset 2px 2px 2px rgba(255, 255, 255, .075),
+              inset 2px 2px 4px rgba(0, 0, 0, .15);
 }
